# PruebaLACOMET

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: main.yml
examples/: using_my_module.py
src/midemo/: my_module.py
tests/: test_example.py
