[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midemo"
version = "0.1.0"
dependencies = []
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["modules"]
exclude = ["examples", "tests"]